# platform-litex

./: README.md  platform.json  platform.py  pyproject.toml
boards/: litex_vexriscv.json
builder/: main.py
builder/frameworks/: _bare.py  zephyr-pio-build.py  zephyr.py
examples/hallo/: platformio.ini
examples/hallo/src/: main.c
examples/hallo/zephyr/: CMakeLists.txt  litex_vexriscv.overlay  prj.conf
src/platform_litex/: __init__.py
